# nmpde-project4-Cesaroni-Tonarelli-Trabacchin

./: .gitignore  CMakeLists.txt  README.md  profile.hpp
common/: cmake-common.cmake
scripts/: mesh_nmpde.geo
src/: BuenoOrovioIonicModel.hpp  BuenoOrovioIonicModelIon1.hpp  BuenoOrovioIonicModelIon2.hpp  Coupler.hpp  FESolver.cpp  FESolver.hpp  ICICoupler.hpp  IonicModel.hpp  MonodomainSolver.cpp  MonodomainSolver.h  ODESolver.hpp  QCoupler.hpp  SVICoupler.hpp  Solver.hpp  VectorView.hpp  main.cpp  utils.hpp
src/Couplers/: Coupler.hpp  GICoupler.hpp  ICICoupler.hpp  QCoupler.hpp  SVICoupler.hpp
src/IonicModels/: IonicModel.hpp  ODESolver.hpp
src/IonicModels/BuenoOrovioModel/: BOModel.hpp  BOModelSI1.hpp  BOModelSI2.hpp
src/MonodomainSolver/: FESolver.cpp  FESolver.hpp  ODESolver.hpp  Solver.hpp
